syntax = "proto3";
package tm;

option go_package = "github.com/gnolang/gno/tm2/pkg/crypto/multisig/pb";

// imports
import "google/protobuf/any.proto";

// messages
message PubKeyMultisig {
	uint64 k = 1 [json_name = "threshold"];
	repeated google.protobuf.Any pub_keys = 2 [json_name = "pubkeys"];
}

message Multisignature {
	CompactBitArray bit_array = 1;
	repeated bytes sigs = 2;
}

message CompactBitArray {
	uint32 extra_bits_stored = 1 [json_name = "extra_bits"]; // The number of extra bits in elems.
	bytes elems = 2 [json_name = "bits"];
}